# VirtualPrinter

./: .gitignore  DESIGN.md  README.md  TECHNICAL_DOCUMENTATION.md  VirtualPrinter.sln  build.bat
drivers/CanonGenericPlusPS3/: CNS30MA64.INF
installer/: setup.iss
installer/components/: CMakeLists.txt  EnvChecker.cpp  EnvChecker.h
lib/: README.md
src/RedmonRedirector/: CMakeLists.txt  main.cpp
src/VPGhostLib/: GSConvert.cs  VPGhostLib.csproj
src/VPPostScriptMon/: CMakeLists.txt  DllMain.cpp  Monitor.cpp  Monitor.h  PipeClient.cpp  PipeClient.h  Port.cpp  Port.h  stdafx.h
src/VirtualPrinter.Tests/: VirtualPrinter.Tests.csproj
src/VirtualPrinter.Tests/Integration/: PipeCommunicationTests.cs
src/VirtualPrinterLauncher/: Program.cs  VirtualPrinterLauncher.csproj
src/VirtualPrinterManager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProgressWindow.xaml  ProgressWindow.xaml.cs  VirtualPrinterManager.csproj
src/VirtualPrinterSaveDialog/: AdvancedSettingsWindow.xaml  AdvancedSettingsWindow.xaml.cs  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProgressWindow.xaml  ProgressWindow.xaml.cs  VirtualPrinterSaveDialog.csproj
src/VirtualPrinterService/: MainService.cs  Program.cs  ProjectInstaller.cs  VirtualPrinterService.csproj
tests/: _deploy_clean.ps1  _deploy_run.ps1  _deploy_verbose.ps1  _finalclean.ps1  _fresh_deploy.ps1  _install_printer.ps1  _install_service.ps1  _redeploy2.ps1  _restart_noLogLevel.ps1  _restart_spool.ps1  addport.cs  deploy_test.ps1  e2e_test.ps1  install_vppostscriptmon.ps1  vpmon_poller.ps1
(+19 files in other folders)
